--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,12 @@
-[package]
-name = "rust-tui-app"
-version = "0.1.0"
-edition = "2021"
+[workspace]
+members = [
+    "tui",
+    "service",
+    "rpc",
+]
+resolver = "2"
 
-[dependencies]
+[workspace.dependencies]
 color-eyre = "0.6.5"
 crossterm = "0.29.0"
 ratatui = "0.29.0"
