--- a/pipeline-cli/Cargo.toml
+++ b/pipeline-cli/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
-name = "service"
+name = "pipeline-cli"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-serde = { version = "1.0", features = ["derive"] }
-serde_yaml = "0.9"
+service = { path = "../service" }
 tokio = { version = "1.0", features = ["full"] }
-thiserror = "1.0"
+color-eyre = { workspace = true }
