--- a/tui/Cargo.toml
+++ b/tui/Cargo.toml
@@ -8,3 +8,6 @@ color-eyre = { workspace = true }
 crossterm = { workspace = true }
 ratatui = { workspace = true }
 service = { path = "../service" }
+rpc = { path = "../rpc" }
+tokio = { version = "1.0", features = ["full"] }
+serde = { version = "1.0", features = ["derive"] }
