--- a/roxid-cli/Cargo.toml
+++ b/roxid-cli/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-service = { path = "../service" }
+pipeline-service = { path = "../pipeline-service" }
 tokio = { version = "1.0", features = ["full"] }
 color-eyre = { workspace = true }
