--- a/roxid-tui/Cargo.toml
+++ b/roxid-tui/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "tui"
+name = "roxid-tui"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,7 +7,7 @@ edition = "2021"
 color-eyre = { workspace = true }
 crossterm = { workspace = true }
 ratatui = { workspace = true }
-service = { path = "../service" }
-rpc = { path = "../rpc" }
+pipeline-service = { path = "../pipeline-service" }
+pipeline-rpc = { path = "../pipeline-rpc" }
 tokio = { version = "1.0", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
