Cleanup empty directories and create pipeline-handler

--- a/pipeline-rpc/Cargo.toml
+++ b/pipeline-rpc/Cargo.toml
@@ -5,4 +5,5 @@ edition = "2021"
 
 [dependencies]
 pipeline-service = { path = "../pipeline-service" }
+tokio = { version = "1.0", features = ["sync"] }
 # Add your RPC dependencies here (e.g., tonic, tarpc, etc.)
