Update username in github toml files

--- a/roxid-cli/Cargo.toml
+++ b/roxid-cli/Cargo.toml
@@ -2,10 +2,10 @@
 name = "roxid"
 version = "0.1.0"
 edition = "2021"
-authors = ["Your Name <your.email@example.com>"]
+authors = ["Trey Herrington <trey.herrington00@gmail.com>"]
 description = "A Terminal User Interface (TUI) for managing and executing YAML-based pipelines"
 license = "MIT OR Apache-2.0"
-repository = "https://github.com/yourusername/roxid"
+repository = "https://github.com/trey-herrington/roxid"
 homepage = "https://github.com/yourusername/roxid"
 keywords = ["tui", "pipeline", "cli", "terminal", "yaml"]
 categories = ["command-line-utilities", "development-tools"]
