--- a/roxid-tui/Cargo.toml
+++ b/roxid-tui/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 description = "Internal: Terminal UI components for roxid pipeline runner - not intended for direct use"
-repository = "https://github.com/yourusername/roxid"
+repository = "https://github.com/trey-herrington/roxid"
 documentation = "https://docs.rs/roxid-tui"
 readme = false
 publish = true
