--- a/pipeline-service/Cargo.toml
+++ b/pipeline-service/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 description = "Internal: Core pipeline execution service for roxid - not intended for direct use"
-repository = "https://github.com/yourusername/roxid"
+repository = "https://github.com/trey-herrington/roxid"
 documentation = "https://docs.rs/pipeline-service"
 readme = false
 publish = true
