Change to grpc service

--- a/roxid-tui/Cargo.toml
+++ b/roxid-tui/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "roxid-tui"
-version = "0.1.2"
+version = "0.2.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 description = "Internal: Terminal UI components for roxid pipeline runner - not intended for direct use"
@@ -13,6 +13,12 @@ publish = true
 color-eyre = { workspace = true }
 crossterm = { workspace = true }
 ratatui = { workspace = true }
-pipeline-rpc = { version = "0.1.0", path = "../pipeline-rpc" }
+pipeline-service = { version = "0.2.0", path = "../pipeline-service" }
 tokio = { version = "1.0", features = ["full"] }
+tokio-stream = "0.1"
 serde = { version = "1.0", features = ["derive"] }
+tonic = "0.12"
+prost = "0.13"
+
+[build-dependencies]
+tonic-build = "0.12"
