Add protobuf installation to fix github actions error

--- a/.github/workflows/roxid-ci-cd.yaml
+++ b/.github/workflows/roxid-ci-cd.yaml
@@ -84,6 +84,9 @@ jobs:
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
 
+      - name: Install protobuf compiler
+        run: sudo apt-get update && sudo apt-get install -y protobuf-compiler
+
       - name: Publish pipeline-service
         run: cargo publish -p pipeline-service --token ${{ secrets.CARGO_TOKEN }}
         continue-on-error: false
