--- a/.github/workflows/roxid-ci-cd.yaml
+++ b/.github/workflows/roxid-ci-cd.yaml
@@ -44,6 +44,14 @@ jobs:
         if: matrix.target == 'x86_64-unknown-linux-musl'
         run: sudo apt-get update && sudo apt-get install -y musl-tools
 
+      - name: Install protobuf compiler (Linux)
+        if: runner.os == 'Linux'
+        run: sudo apt-get update && sudo apt-get install -y protobuf-compiler
+
+      - name: Install protobuf compiler (macOS)
+        if: runner.os == 'macOS'
+        run: brew install protobuf
+
       - name: Build roxid
         run: cargo build --release --target ${{ matrix.target }} --bin roxid
 
