--- a/pipeline-service/Cargo.toml
+++ b/pipeline-service/Cargo.toml
@@ -16,12 +16,19 @@ path = "src/bin/server.rs"
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 serde_yaml = "0.9"
 tokio = { version = "1.0", features = ["full"] }
 tokio-stream = "0.1"
 thiserror = "1.0"
 tonic = "0.12"
 prost = "0.13"
+async-trait = "0.1"
+dirs = "5.0"
+which = "6.0"
 
 [build-dependencies]
 tonic-build = "0.12"
+
+[dev-dependencies]
+tempfile = "3.0"
