--- a/roxid-cli/Cargo.toml
+++ b/roxid-cli/Cargo.toml
@@ -15,18 +15,9 @@ readme = "../README.md"
 name = "roxid"
 path = "src/main.rs"
 
-[[bin]]
-name = "pipeline-service"
-path = "src/bin/pipeline-service.rs"
-
 [dependencies]
 pipeline-service = { version = "0.8.0", path = "../pipeline-service" }
 roxid-tui = { version = "0.8.0", path = "../roxid-tui" }
 tokio = { version = "1.0", features = ["full"] }
-tokio-stream = "0.1"
 color-eyre = { workspace = true }
-tonic = "0.12"
-prost = "0.13"
-
-[build-dependencies]
-tonic-build = "0.12"
+clap = { version = "4", features = ["derive"] }
