--- a/roxid-tui/Cargo.toml
+++ b/roxid-tui/Cargo.toml
@@ -15,7 +15,5 @@ crossterm = { workspace = true }
 ratatui = { workspace = true }
 pipeline-service = { version = "0.8.0", path = "../pipeline-service" }
 tokio = { version = "1.0", features = ["full"] }
-tokio-stream = "0.1"
 serde = { version = "1.0", features = ["derive"] }
-tonic = "0.12"
-prost = "0.13"
+serde_yaml = "0.9"
