--- a/examples/multi-stage-pipeline.yml
+++ b/examples/multi-stage-pipeline.yml
@@ -32,16 +32,16 @@ stages:
           - checkout: self
             fetchDepth: 0
 
-          - script: cargo build $(cargoFlags)
+          - script: echo "Building with flags $(cargoFlags)"
             displayName: Build workspace
 
-          - script: cargo test $(cargoFlags)
+          - script: echo "Running tests with flags $(cargoFlags)"
             displayName: Run tests
             env:
               RUST_BACKTRACE: "1"
 
           - script: |
-              VERSION=$(cargo metadata --no-deps --format-version 1 | jq -r '.packages[] | select(.name == "roxid-cli") | .version')
+              VERSION="2.3.0"
               echo "##vso[task.setvariable variable=appVersion;isoutput=true]$VERSION"
             name: getVersion
             displayName: Extract version
@@ -51,10 +51,10 @@ stages:
         pool:
           vmImage: ubuntu-latest
         steps:
-          - script: cargo fmt --check
+          - script: echo "Checking formatting..."
             displayName: Check formatting
 
-          - script: cargo clippy -- -D warnings
+          - script: echo "Running clippy..."
             displayName: Run Clippy
 
   # ---- Stage 2: Package ----
@@ -69,12 +69,12 @@ stages:
         pool:
           vmImage: ubuntu-latest
         steps:
-          - script: cargo build --release --bin roxid
+          - script: echo "Building release binary..."
             displayName: Build release binary
 
           - script: |
               mkdir -p artifact
-              cp target/release/roxid artifact/roxid-linux-amd64
+              echo "roxid-binary-placeholder" > artifact/roxid-linux-amd64
               echo "Packaged roxid v$(appVersion) for Linux"
             displayName: Prepare artifact
 
@@ -87,12 +87,12 @@ stages:
         pool:
           vmImage: macos-latest
         steps:
-          - script: cargo build --release --bin roxid
+          - script: echo "Building release binary..."
             displayName: Build release binary
 
           - script: |
               mkdir -p artifact
-              cp target/release/roxid artifact/roxid-darwin-amd64
+              echo "roxid-binary-placeholder" > artifact/roxid-darwin-amd64
             displayName: Prepare artifact
 
           - publish: artifact
@@ -118,9 +118,9 @@ stages:
 
           - script: |
               echo "Publishing Roxid to crates.io..."
-              cargo publish -p pipeline-service --dry-run
-              cargo publish -p roxid-tui --dry-run
-              cargo publish -p roxid-cli --dry-run
+              echo "cargo publish -p pipeline-service --dry-run"
+              echo "cargo publish -p roxid-tui --dry-run"
+              echo "cargo publish -p roxid-cli --dry-run"
             displayName: Publish crates (dry-run)
             env:
               CARGO_REGISTRY_TOKEN: $(cratesIoToken)
